--- a/portfolio.html
+++ b/portfolio.html
@@ -114,16 +114,38 @@
           <li class="project__item">
             <a href="" class="card__link link">
               <div class="card__describe">
-                <img
-                  srcset="
-                    ./img/portfolio/img-portfolio-1.jpg    1x,
-                    ./img/portfolio/img-portfolio-1@2x.jpg 2x
-                  "
-                  src="./img/portfolio/img-portfolio-1.jpg"
-                  alt="basketball poster"
-                  class="card__img"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./img/portfolio/img-portfolio-1.jpg    1x,
+                      ./img/portfolio/img-portfolio-1@2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+
+                  <source
+                    srcset="
+                      ./img/portfolio/tablet-img-portfolio-1.jpg    1x,
+                      ./img/portfolio/tablet-img-portfolio-1@2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+
+                  <source
+                    srcset="
+                      ./img/portfolio/mobile-img-portfolio-1.jpg    1x,
+                      ./img/portfolio/mobile-img-portfolio-1@2x.jpg 2x
+                    "
+                    media="(min-width:480px)"
+                  />
+                  <img
+                    src="./img/portfolio/mobile-img-portfolio-1.jpg"
+                    alt="basketball poster"
+                    class="card__img"
+                    width="370"
+                  />
+                </picture>
+
                 <p class="card__text">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                   це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
@@ -139,16 +161,37 @@
           <li class="project__item">
             <a href="" class="card__link link">
               <div class="card__describe">
-                <img
-                  srcset="
-                    ./img/portfolio/img-portfolio-2.jpg    1x,
-                    ./img/portfolio/img-portfolio-2@2x.jpg 2x
-                  "
-                  src="./img/portfolio/img-portfolio-2.jpg"
-                  alt="basketball poster"
-                  class="card__img"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./img/portfolio/img-portfolio-2.jpg    1x,
+                      ./img/portfolio/img-portfolio-2@2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+
+                  <source
+                    srcset="
+                      ./img/portfolio/tablet-img-portfolio-2.jpg    1x,
+                      ./img/portfolio/tablet-img-portfolio-2@2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+
+                  <source
+                    srcset="
+                      ./img/portfolio/mobile-img-portfolio-2.jpg    1x,
+                      ./img/portfolio/mobile-img-portfolio-2@2x.jpg 2x
+                    "
+                    media="(min-width:480px)"
+                  />
+                  <img
+                    src="./img/portfolio/mobile-img-portfolio-2.jpg"
+                    alt="basketball poster"
+                    class="card__img"
+                    width="370"
+                  />
+                </picture>
                 <p class="card__text">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                   це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
@@ -164,16 +207,37 @@
           <li class="project__item">
             <a href="" class="card__link link">
               <div class="card__describe">
-                <img
-                  srcset="
-                    ./img/portfolio/img-portfolio-3.jpg    1x,
-                    ./img/portfolio/img-portfolio-3@2x.jpg 2x
-                  "
-                  src="./img/portfolio/img-portfolio-3.jpg"
-                  alt="basketball poster"
-                  class="card__img"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./img/portfolio/img-portfolio-3.jpg    1x,
+                      ./img/portfolio/img-portfolio-3@2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+
+                  <source
+                    srcset="
+                      ./img/portfolio/tablet-img-portfolio-3.jpg    1x,
+                      ./img/portfolio/tablet-img-portfolio-3@2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+
+                  <source
+                    srcset="
+                      ./img/portfolio/mobile-img-portfolio-3.jpg    1x,
+                      ./img/portfolio/mobile-img-portfolio-3@2x.jpg 2x
+                    "
+                    media="(min-width:480px)"
+                  />
+                  <img
+                    src="./img/portfolio/mobile-img-portfolio-3.jpg"
+                    alt="basketball poster"
+                    class="card__img"
+                    width="370"
+                  />
+                </picture>
                 <p class="card__text">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                   це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
@@ -189,16 +253,37 @@
           <li class="project__item">
             <a href="" class="card__link link">
               <div class="card__describe">
-                <img
-                  srcset="
-                    ./img/portfolio/img-portfolio-4.jpg1x,
-                    ./img/portfolio/img-portfolio-4@2x.jpg 2x
-                  "
-                  src="./img/portfolio/img-portfolio-4.jpg"
-                  alt="basketball poster"
-                  class="card__img"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./img/portfolio/img-portfolio-4.jpg    1x,
+                      ./img/portfolio/img-portfolio-4@2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+
+                  <source
+                    srcset="
+                      ./img/portfolio/tablet-img-portfolio-4.jpg    1x,
+                      ./img/portfolio/tablet-img-portfolio-4@2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+
+                  <source
+                    srcset="
+                      ./img/portfolio/mobile-img-portfolio-4.jpg    1x,
+                      ./img/portfolio/mobile-img-portfolio-4@2x.jpg 2x
+                    "
+                    media="(min-width:480px)"
+                  />
+                  <img
+                    src="./img/portfolio/mobile-img-portfolio-4.jpg"
+                    alt="basketball poster"
+                    class="card__img"
+                    width="370"
+                  />
+                </picture>
                 <p class="card__text">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                   це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
@@ -214,16 +299,37 @@
           <li class="project__item">
             <a href="" class="card__link link">
               <div class="card__describe">
-                <img
-                  srcset="
-                    ./img/portfolio/img-portfolio-5.jpg1x,
-                    ./img/portfolio/img-portfolio-5@2x.jpg 2x
-                  "
-                  src="./img/portfolio/img-portfolio-5.jpg"
-                  alt="basketball poster"
-                  class="card__img"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./img/portfolio/img-portfolio-5.jpg    1x,
+                      ./img/portfolio/img-portfolio-5@2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+
+                  <source
+                    srcset="
+                      ./img/portfolio/tablet-img-portfolio-5.jpg    1x,
+                      ./img/portfolio/tablet-img-portfolio-5@2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+
+                  <source
+                    srcset="
+                      ./img/portfolio/mobile-img-portfolio-5.jpg    1x,
+                      ./img/portfolio/mobile-img-portfolio-5@2x.jpg 2x
+                    "
+                    media="(min-width:480px)"
+                  />
+                  <img
+                    src="./img/portfolio/mobile-img-portfolio-5.jpg"
+                    alt="basketball poster"
+                    class="card__img"
+                    width="370"
+                  />
+                </picture>
                 <p class="card__text">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                   це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
@@ -239,16 +345,37 @@
           <li class="project__item">
             <a href="" class="card__link link">
               <div class="card__describe">
-                <img
-                  srcset="
-                    ./img/portfolio/img-portfolio-6.jpg1x,
-                    ./img/portfolio/img-portfolio-6@2x.jpg 2x
-                  "
-                  src="./img/portfolio/img-portfolio-6.jpg"
-                  alt="basketball poster"
-                  class="card__img"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./img/portfolio/img-portfolio-6.jpg    1x,
+                      ./img/portfolio/img-portfolio-6@2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+
+                  <source
+                    srcset="
+                      ./img/portfolio/tablet-img-portfolio-6.jpg    1x,
+                      ./img/portfolio/tablet-img-portfolio-6@2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+
+                  <source
+                    srcset="
+                      ./img/portfolio/mobile-img-portfolio-6.jpg    1x,
+                      ./img/portfolio/mobile-img-portfolio-6@2x.jpg 2x
+                    "
+                    media="(min-width:480px)"
+                  />
+                  <img
+                    src="./img/portfolio/mobile-img-portfolio-6.jpg"
+                    alt="basketball poster"
+                    class="card__img"
+                    width="370"
+                  />
+                </picture>
                 <p class="card__text">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                   це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
@@ -264,16 +391,37 @@
           <li class="project__item">
             <a href="" class="card__link link">
               <div class="card__describe">
-                <img
-                  srcset="
-                    ./img/portfolio/img-portfolio-7.jpg1x,
-                    ./img/portfolio/img-portfolio-7@2x.jpg 2x
-                  "
-                  src="./img/portfolio/img-portfolio-7.jpg"
-                  alt="basketball poster"
-                  class="card__img"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./img/portfolio/img-portfolio-7.jpg    1x,
+                      ./img/portfolio/img-portfolio-7@2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+
+                  <source
+                    srcset="
+                      ./img/portfolio/tablet-img-portfolio-7.jpg    1x,
+                      ./img/portfolio/tablet-img-portfolio-7@2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+
+                  <source
+                    srcset="
+                      ./img/portfolio/mobile-img-portfolio-7.jpg    1x,
+                      ./img/portfolio/mobile-img-portfolio-7@2x.jpg 2x
+                    "
+                    media="(min-width:480px)"
+                  />
+                  <img
+                    src="./img/portfolio/mobile-img-portfolio-7.jpg"
+                    alt="basketball poster"
+                    class="card__img"
+                    width="370"
+                  />
+                </picture>
                 <p class="card__text">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                   це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
@@ -289,16 +437,37 @@
           <li class="project__item">
             <a href="" class="card__link link">
               <div class="card__describe">
-                <img
-                  srcset="
-                    ./img/portfolio/img-portfolio-8.jpg1x,
-                    ./img/portfolio/img-portfolio-8@2x.jpg 2x
-                  "
-                  src="./img/portfolio/img-portfolio-8.jpg"
-                  alt="basketball poster"
-                  class="card__img"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./img/portfolio/img-portfolio-8.jpg    1x,
+                      ./img/portfolio/img-portfolio-8@2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+
+                  <source
+                    srcset="
+                      ./img/portfolio/tablet-img-portfolio-8.jpg    1x,
+                      ./img/portfolio/tablet-img-portfolio-8@2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+
+                  <source
+                    srcset="
+                      ./img/portfolio/mobile-img-portfolio-8.jpg    1x,
+                      ./img/portfolio/mobile-img-portfolio-8@2x.jpg 2x
+                    "
+                    media="(min-width:480px)"
+                  />
+                  <img
+                    src="./img/portfolio/mobile-img-portfolio-8.jpg"
+                    alt="basketball poster"
+                    class="card__img"
+                    width="370"
+                  />
+                </picture>
                 <p class="card__text">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                   це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
@@ -314,16 +483,37 @@
           <li class="project__item">
             <a href="" class="card__link link">
               <div class="card__describe">
-                <img
-                  srcset="
-                    ./img/portfolio/img-portfolio-9.jpg1x,
-                    ./img/portfolio/img-portfolio-9@2x.jpg 2x
-                  "
-                  src="./img/portfolio/img-portfolio-9.jpg"
-                  alt="basketball poster"
-                  class="card__img"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./img/portfolio/img-portfolio-9.jpg    1x,
+                      ./img/portfolio/img-portfolio-9@2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+
+                  <source
+                    srcset="
+                      ./img/portfolio/tablet-img-portfolio-9.jpg    1x,
+                      ./img/portfolio/tablet-img-portfolio-9@2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+
+                  <source
+                    srcset="
+                      ./img/portfolio/mobile-img-portfolio-9.jpg    1x,
+                      ./img/portfolio/mobile-img-portfolio-9@2x.jpg 2x
+                    "
+                    media="(min-width:480px)"
+                  />
+                  <img
+                    src="./img/portfolio/mobile-img-portfolio-9.jpg"
+                    alt="basketball poster"
+                    class="card__img"
+                    width="370"
+                  />
+                </picture>
                 <p class="card__text">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                   це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
@@ -419,17 +609,19 @@
         </div>
 
         <form class="footer-form">
-          <label class="footer-form__label">
+          <div class="footer-form__box">
             <p class="footer-form__tile">Підпишіться на розсилку</p>
-            <input
-              type="email"
-              name="subscribe"
-              class="footer-form__input"
-              placeholder="E-mail"
-              required
-            />
-          </label>
 
+            <label class="footer-form__label">
+              <input
+                type="email"
+                name="subscribe"
+                class="footer-form__input"
+                placeholder="E-mail"
+                required
+              />
+            </label>
+          </div>
           <button type="submit" class="footer-form__button">
             Підписатися
             <svg class="footer-form__icon" width="24" height="24">
